// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`infobarActions.bigcommerce.createOrder actions onCancel() should reset the cart id 1`] = `
Array [
  Object {
    "cartId": null,
    "type": "infobarActions/bigcommerce/createOrder/SET_CART_ID",
  },
]
`;

exports[`infobarActions.bigcommerce.createOrder actions onInit() should init the state 1`] = `
Array [
  Object {
    "cartId": "eed98ad3-8f2a-4558-864a-3a9e04d2cb61",
    "type": "infobarActions/bigcommerce/createOrder/SET_CART_ID",
  },
]
`;

exports[`infobarActions.bigcommerce.createOrder actions onReset() should reset state 1`] = `
Array [
  Object {
    "type": "infobarActions/bigcommerce/createOrder/RESET_CART",
  },
]
`;
